--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Who we Are
+                  Who we Are...!
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="#">Roles</a></li>
                   <li><a class="dropdown-item" href="#">Goals</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Vision</a></li>
+                  <li><a class="dropdown-item" href="#">Our Vision</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
+                <a class="nav-link disabled">This is disabled menu</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
